R-3.1.2 with updated metaSEM-0.9.1

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
-Release 0.9-1 (Nov 27, 2014)
+Release 0.9-1 (Dec 22, 2014)
 ====================================
+* Added citation in "Frontiers in Psychology"
 * Released after the official release of OpenMx 2.0
 * Removed dataset Craft03 which is duplicated of Becker09
 
