--- a/index.Rmd
+++ b/index.Rmd
@@ -112,24 +112,35 @@ summary( meta(y=cbind(PD, AL), v=cbind(var_PD, cov_PD_AL, var_AL), data=Berkey98
 * [Meta-analytic structural equation modeling](./masem.html)
 
 # Installation and help
-* The current version is 0.9-2.
+* The current version is 0.9-2. There are several methods to install the `metaSEM` package. If you have already installed the developmental tools and the `devtools` package. You may install the `metaSEM` package from the GitHub. Alternatively, you may download the binary package for Windows platform and the source for Linxu and Mac OS X platforms.
 * First of all, you need [R](http://www.r-project.org/) to run it. Since `metaSEM` depends on [OpenMx](http://openmx.psyc.virginia.edu/), you may also need to install `OpenMx` by run the following command inside an `R` session:
+
 ```
+## Install OpenMx
 source('http://openmx.psyc.virginia.edu/getOpenMx.R') 
+
+library(devtools)
+
+## Install metaSEM from GitHub
+install_github("mikewlcheung/metasem")
 ```
 
 ## Windows platform
 * Download the Windows [Binary for Windows](https://dl.dropboxusercontent.com/u/25182759/metaSEM_0.9-2.zip) package of the `metaSEM`. Please note that d:\ in Windows is represented by either d:/ or d:\\ in `R`. If the file is saved at d:\\, run the following command inside an `R` session:
+
 ```
 install.packages(pkgs="d:/metaSEM_0.9-2.zip", repos=NULL)
 ```
 
 ## Linux and Mac OS X platforms
 * Download the [Source](https://dl.dropboxusercontent.com/u/25182759/metaSEM_0.9-2.tar.gz) package of `metaSEM`. If the file is saved at /home/mike/, run the following command inside an `R` session:
+
 ```
 install.packages(pkgs="/home/mike/metaSEM_0.9-2.tar.gz", repos=NULL, type="source")
 ```
+
 * Alternatively, the `metaSEM` package may also be installed in the terminal by using:
+
 ```
 R CMD INSTALL metaSEM_0.9-2.tar.gz
 ```
