--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Release 0.9.3-1 (May 12, 2015)
+====================================
+* Corrected a typo in the example of Aloe14 (reported by Fred Li)
+* Modified to fit R-3.2.0
+
 Release 0.9-2 (Jan 23, 2015)
 ====================================
 * Added dataset Cheung00
